minor fix to messages
stops certain things being cut off by a border

--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -56,7 +56,7 @@
   width: fit-content;
   margin: 0;
   padding: 2px;
-  border-radius: 15px;
+  border-radius: 0px;
 }
 
 /*Message text configuration*/
